show working inside war